dropshot/tests/fail/bad_trait_channel26.stderr
error: endpoint `bad_channel` has invalid attributes: missing field `path`
 --> tests/fail/bad_trait_channel26.rs:9:1
  |
9 | #[dropshot::api_description]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `dropshot::api_description` (in Nightly builds, run with -Z macro-backtrace for more info)
